# Misinfo-Arena

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
data/: experiment_preflight.csv  experiment_rerun_failed.csv  experiment_rerun_gemini.csv  experiment_spec.csv  experiment_v2_spec.csv  golden_set_v0.jsonl  golden_set_v1.jsonl  study1_corpus_spec.csv  study2_length_spec.csv  study3_claimtype_spec.csv  v2_claims.py
docs/: experiment_design_options.md  experiment_execution_guide.md  experiment_proposal.md  experiment_v2_changes.md  experimental_design_final.md  known_limitations.md  logic_changes_assessment.md  phase7_visualization_plan.md  statistical_analysis_guide.md  statistical_analysis_runbook.md  statistical_testing_guide.md  v1_prompts_archive.md
scripts/: backfill_strategy_definitions.py  build_study_baselines.py  check_url_hallucinations.py  cleanup_runs_keep5.py  generate_context_pack.py  generate_golden_debates.py  generate_refactor_report.py  generate_study_specs.py  golden_sanity_check.py  golden_under_the_hood_audit.py  import_health_check.py  inspect_matches_paths.py  inspect_persistence_artifacts.py  judge_eval.py  quick_test.py  runs_audit_script.py  runs_retention_audit.py  smoke_wave1_imports.py  smoke_wave2_imports.py  smoke_wave3_use_case.py  smoke_wave4_turn_result.py  smoke_wave5_run_store.py  validate_v2_storage.py  verify_phase4a.py  wave3_dependency_check.py
tests/: conftest.py  import_diag.py  prompt_sanity_test.py  test_analytics_long_format.py  test_analytics_page_imports.py  test_constant.py  test_phase1.py  (+8 more)
(+83 files in other folders)
